# madeinabyss-minecraft-search

./: README.md  pyproject.toml
assets/: source.txt
src/: main.py  mappings.py  sample.py
src/mvs/: __init__.py  mappings.py  mvs.py
src/mvs/mcfunctions/: getBlock.mcfunction  getDropperData.mcfunction  setBlock.mcfunction  setDropper.mcfunction
tools/: create_index.py  load_source.py
