[project]
name = "madeinabyss-minecraft-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.4",
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.30",
    "numpy>=2.3.2",
    "tqdm>=4.67.1",
]
